[metadata]
name = repairman
author = RiotKit Collective
author_email = marek_andrzejczak@riseup.net
summary = Kubernetes-like auto-heal for non-Kubernetes docker environments eg. docker, docker-compose, swarm or even ex. Nomad
license = MIT
description-file = README.md
home-page = https://github.com/riotkit-org/docker-autoheal
python_requires = >=3.5
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: System :: Systems Administration

[files]
packages = repairman

[entry_points]
console_scripts =
    repairman = repairman:main
